--- a/style.css
+++ b/style.css
@@ -851,3 +851,16 @@ tr:hover {
 .box.shake-red {
   animation: shakeRed 0.4s ease; /* Применение анимации тряски и красного свечения */
 }
+
+
+
+
+
+/* Решение NO_FCP в Lighthouse */
+#fcp-marker {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 1px;
+  color: transparent;
+}
